--- a/app/assets/stylesheets/layout.scss
+++ b/app/assets/stylesheets/layout.scss
@@ -172,6 +172,8 @@
           margin-right: 15px;
           img{
             border-radius: 50%;
+            object-fit: cover;
+            font-family: 'object-fit: cover;';
           }
         }
         nav{
