--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -14,8 +14,7 @@
         #{@user.total_time / 60} 時間
       %p
         %span 卒業まで　:
-        = state = (0 > (300 - @user.total_time / 60)) ? "卒業おめでとう！" : 300 - @user.total_time / 60
-        時間
+        = state = (0 > (300 - @user.total_time / 60)) ? "卒業おめでとう！" : "#{300 - @user.total_time / 60}時間"
       - if @current_user == @user
         %p
           %span プロフィール設定:
